feat(backend): implement JWT authentication system
- Add user models with Pydantic validation and MongoDB integration
- Implement JWT token generation/validation (15min access, 7day refresh)
- Create UserService for MongoDB CRUD operations
- Add authentication middleware with HTTPBearer security
- Implement auth routes (register, login, refresh, me endpoints)
- Add comprehensive unit and integration tests (25 tests, 86.51% coverage)
- Fix MongoDB authentication with authSource=admin parameter
- Resolve motor/pymongo dependency compatibility (pymongo 4.9.1)
- Add email-validator dependency for Pydantic EmailStr type

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,10 +6,11 @@ python-multipart==0.0.12
 # Pydantic for data validation
 pydantic==2.9.2
 pydantic-settings==2.6.0
+email-validator==2.2.0
 
 # Database
 motor==3.6.0
-pymongo==4.10.1
+pymongo==4.9.1
 
 # S3-compatible storage
 boto3==1.35.58
