--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,9 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
+# Ignore Python lib directories but not frontend/src/lib
+/lib/
+/lib64/
 parts/
 sdist/
 var/
@@ -79,3 +80,4 @@ temp/
 
 # OS
 Thumbs.db
+docs/logs.txt
