perf: Optimize backend performance with Gunicorn, Celery tuning, and connection pooling
- Add Gunicorn with 4 Uvicorn workers for concurrent request handling
- Increase Celery workers from 2 to 4 and optimize restart policy (1 -> 50 tasks)
- Add MongoDB connection pooling (50 max, 10 min connections)
- Reduce bcrypt rounds from 12 to 10 for 4x faster authentication
- Add Celery connection pooling and retry logic
- Update production docker-compose with optimized Celery configuration

Expected performance improvements:
- Registration: 20s -> 2-3s (90% improvement)
- Summary generation: Eliminate timeouts
- Concurrent capacity: 4x improvement
- Database stability: Connection pooling prevents exhaustion

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,7 +137,7 @@ services:
     image: artemis-insight-backend:latest
     container_name: artemis-insight-celery-worker
     restart: unless-stopped
-    command: celery -A app.celery_app worker --loglevel=info --concurrency=2
+    command: celery -A app.celery_app worker --loglevel=info --concurrency=4 --max-tasks-per-child=50 --time-limit=1800 --soft-time-limit=1700
     environment:
       # Application
       APP_NAME: ${APP_NAME:-Artemis Insight}
