--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 # FastAPI and async server
 fastapi==0.115.0
 uvicorn[standard]==0.32.0
+gunicorn==21.2.0
 python-multipart==0.0.12
 
 # Pydantic for data validation
