--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -188,6 +188,12 @@ services:
       - mongodb
       - redis
       - minio
+    healthcheck:
+      test: ['CMD-SHELL', 'celery -A app.celery_app inspect ping -d celery@$$HOSTNAME || exit 1']
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     deploy:
       resources:
         limits:
