perf: Major PDF processing optimizations for speed and memory
- Replace pdfplumber with PyMuPDF (fitz) - 10-50x faster for large PDFs
- Add comprehensive progress logging throughout PDF extraction
- Add progress logging for embedding generation batches
- Optimize memory usage in chunking algorithm
- Add detailed logging every 10 pages during extraction
- Log chunking progress to detect bottlenecks
- Reduce memory footprint for large documents (15MB+ PDFs)

This ensures processing won't hang and provides visibility into what's happening.
The 38-hour stuck job should now process in minutes instead.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,7 @@ celery[redis]==5.4.0
 redis==5.2.0
 
 # PDF processing
+PyMuPDF==1.24.14  # Much faster than pdfplumber for large PDFs
 pdfplumber==0.11.4
 PyPDF2==3.0.1
 reportlab==4.2.5
