--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -40,11 +40,15 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
 
 # Run FastAPI with gunicorn for production performance
 CMD ["gunicorn", "app.main:app", \
-    "--workers", "4", \
+    "--workers", "2", \
     "--worker-class", "uvicorn.workers.UvicornWorker", \
     "--bind", "0.0.0.0:8000", \
-    "--timeout", "120", \
+    "--timeout", "300", \
+    "--graceful-timeout", "120", \
     "--keep-alive", "5", \
+    "--max-requests", "1000", \
+    "--max-requests-jitter", "100", \
+    "--worker-tmp-dir", "/dev/shm", \
     "--access-logfile", "-", \
     "--error-logfile", "-", \
     "--log-level", "info"]
