--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ fastapi==0.115.0
 uvicorn[standard]==0.32.0
 gunicorn==21.2.0
 python-multipart==0.0.12
+slowapi==0.1.9  # Rate limiting to prevent API overload
 
 # Pydantic for data validation
 pydantic==2.9.2
