--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -140,9 +140,10 @@ services:
     deploy:
       resources:
         limits:
-          memory: 2G
+          memory: 1G  # Reduced from 2G - using 2 workers instead of 4
+          cpus: '1.0'
         reservations:
-          memory: 1G
+          memory: 512M
 
   # Celery Worker
   celery_worker:
